renamed notebooks, adjusted content slightly

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -151,7 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR Mission: Adjust the function below and reuse it in the main.py file later to deploy to Azure and to update your service\n"
+    "# YOUR Mission: \n",
+    "Adjust the function below and reuse it in the main.py file later to deploy to Azure and to update your service. \n",
+    "Ensure the answers provided are correct and in the correct format.\n"
    ]
   },
   {
@@ -250,7 +252,7 @@
    "source": [
     "Make sure you transfer your code changes into main.py (or additional files). Then redeploy your container using this command.\n",
     "```\n",
-    "bash ./azd-hooks/deploy.sh phase1 $AZURE_ENV_NAME\n",
+    "bash ./azd-hooks/deploy.sh phase3 $AZURE_ENV_NAME\n",
     "```\n",
     "Make sure to provide the URL of your endpoint in the team portal!"
    ]
