--- a/src-agents/phase4/notebook_p4.ipynb
+++ b/src-agents/phase4/notebook_p4.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Phase 4 - Efficiency\n",
     "If not already done run this in the top level folder:\n",
     "```\n",
     "pip install -r requirements.txt\n",
@@ -14,14 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found Azure OpenAI API Base Endpoint: https://cog-fkplarx5db7we.openai.azure.com/\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
     "import os\n",
     "import openai\n",
+    "import tiktoken\n",
     "from enum import Enum\n",
     "from pydantic import BaseModel\n",
     "from openai import AzureOpenAI\n",
@@ -51,33 +61,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see if stuff works in general, you can run this."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# response = client.chat.completions.create(\n",
-    "#     model = model_name,    \n",
-    "#     messages = [{\"role\" : \"assistant\", \"content\" : \"The one thing I love more than anything else is \"}],\n",
-    "# )\n",
-    "\n",
-    "# print(response)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This is the object model for receiving questions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,16 +93,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR Mission: Adjust the function below and reuse it in the main.py file later to deploy to Azure and to update your service\n"
+    "## Get the number of tokens\n",
+    "tiktoken is a library which allows you to get the number of tokens. \n",
+    "Ensure you pick the correct encoding for your model based on this list. https://github.com/openai/tiktoken/blob/c0ba74c238d18b4824c25f3c27fc8698055b9a76/tiktoken/model.py#L20\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of tokens in the string: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_num_tokens_from_string(string: str, encoding_name: str='p50k_base') -> int:\n",
+    "    \"\"\"Returns the number of tokens in a text by a given encoding.\"\"\"\n",
+    "    encoding = tiktoken.get_encoding(encoding_name)\n",
+    "    return len(encoding.encode(string))\n",
+    "\n",
+    "number_of_tokens=get_num_tokens_from_string(\"Hello, Azure AI Adventure Day!\")\n",
+    "print(f\"Number of tokens in the string: {number_of_tokens}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# YOUR Mission: \n",
+    "Adjust the function below and reuse it in the main.py file later to deploy to Azure and to update your service. \n",
+    "Ensure the answers provided are correct and in the correct format.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "async def ask_question(ask: Ask):\n",
     "    \"\"\"\n",
     "    Ask a question\n",
@@ -122,13 +144,20 @@
     "    # Send a completion call to generate an answer\n",
     "    print('Sending a request to openai')\n",
     "    start_phrase = ask.question\n",
+    "    messages=  [{\"role\" : \"assistant\", \"content\" : start_phrase}]\n",
+    "    number_of_tokens_in= get_num_tokens_from_string(messages[0]['content']);\n",
+    "    \n",
     "    response = client.chat.completions.create(\n",
     "        model = deployment_name,\n",
-    "        messages = [{\"role\" : \"assistant\", \"content\" : start_phrase}],\n",
+    "        messages =messages,\n",
     "    )\n",
     "\n",
-    "    print(response.choices[0].message.content)\n",
-    "    print(response)\n",
+    "    number_of_tokens_out= get_num_tokens_from_string(response.choices[0].message.content);\n",
+    "\n",
+    "    print(f\"Number of tokens in the input: {number_of_tokens_in}\")\n",
+    "    print(f\"Number of tokens in the output: {number_of_tokens_out}\")\n",
+    "    print('Total Tokens Used: ' + str(number_of_tokens_in + number_of_tokens_out))\n",
+    "\n",
     "    answer = Answer(answer=response.choices[0].message.content)\n",
     "    answer.correlationToken = ask.correlationToken\n",
     "    answer.promptTokensUsed = response.usage.prompt_tokens\n",
@@ -146,14 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending a request to openai\n",
+      "Number of tokens in the input: 17\n",
+      "Number of tokens in the output: 3\n",
+      "Total Tokens Used: 20\n",
+      "Answer: answer='c. Green' correlationToken=None promptTokensUsed=24 completionTokensUsed=3\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "ask = Ask(question=\"Which of the following is a color? a. Tree b. Flower c. Green\", type=QuestionType.multiple_choice)\n",
     "answer = await ask_question(ask)\n",
-    "print('Answer:', answer)\n"
+    "print('Answer:', answer)"
    ]
   },
   {
@@ -162,8 +203,9 @@
    "source": [
     "Make sure you transfer your code changes into main.py (or additional files). Then redeploy your container using this command.\n",
     "```\n",
-    "bash ./azd-hooks/deploy.sh phase1 $AZURE_ENV_NAME\n",
-    "```\n"
+    "bash ./azd-hooks/deploy.sh phase4 $AZURE_ENV_NAME\n",
+    "```\n",
+    "Make sure to provide the URL of your endpoint in the team portal!"
    ]
   }
  ],
