Added deployment of qdrant and redis cache in ACA

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -107,12 +107,13 @@
     "    openai_api_version = os.getenv(\"OPENAI_EMBEDDING_API_VERSION\"),\n",
     "    model= os.getenv(\"AZURE_OPENAI_EMBEDDING_MODEL\")\n",
     ")\n",
+    "\n",
     "AZURE_OPENAI_VERSION=\"2024-02-01\"\n",
     "# Create an instance of Azure OpenAI\n",
     "llm = AzureChatOpenAI(\n",
     "    azure_deployment = os.getenv(\"AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME\"),\n",
     "    api_version=AZURE_OPENAI_VERSION\n",
-    "    )\n",
+    ")\n",
     "\n",
     "# load your data\n",
     "data_dir = \"data/movies\"\n",
@@ -135,9 +136,7 @@
     "qa = RetrievalQA.from_chain_type(llm=llm, chain_type=\"stuff\", retriever=retriever)\n",
     "loader = DirectoryLoader(path=data_dir, glob=\"*.md\", show_progress=True, loader_cls=UnstructuredMarkdownLoader)\n",
     "\n",
-    "index = VectorstoreIndexCreator(\n",
-    "    embedding=embeddings_model\n",
-    "    ).from_loaders([loader])\n",
+    "index = VectorstoreIndexCreator(embedding=embeddings_model).from_loaders([loader])\n",
     "\n"
    ]
   },
