simplified rag, removed lc

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found Azure OpenAI API Base Endpoint: https://cog-fkplarx5db7we.openai.azure.com/\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,20 +93,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 131.69it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The latest Ant-Man movie, \"Ant-Man and the Smorgs: Smorgmania,\" was released on February 15, 2026. It is an action-adventure science fiction film, featuring superhero partners Smorg Smorisson, Smorg McLean, and Jenny Smorgth. In this movie, they explore the Smorgs Realm and encounter strange new Smorgs, embarking on an adventurous journey that pushes their limits. The movie has gained popularity with an average vote of 9.5.\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.indexes import VectorstoreIndexCreator\n",
     "from langchain.document_loaders import DirectoryLoader, UnstructuredMarkdownLoader\n",
     "from langchain_openai import AzureOpenAIEmbeddings\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain.vectorstores import Qdrant\n",
-    "from langchain.chains import RetrievalQA\n",
     "\n",
     "import os\n",
-    "from langchain.llms import AzureOpenAI\n",
-    "from langchain_openai import AzureChatOpenAI\n",
+    "from openai import AzureOpenAI\n",
+    "from langchain.vectorstores import Qdrant\n",
     "\n",
     "\n",
     "# use an embeddingsmodel to create embeddings\n",
@@ -109,45 +136,51 @@
     ")\n",
     "\n",
     "AZURE_OPENAI_VERSION=\"2024-02-01\"\n",
-    "# Create an instance of Azure OpenAI\n",
-    "llm = AzureChatOpenAI(\n",
-    "    azure_deployment = os.getenv(\"AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME\"),\n",
-    "    api_version=AZURE_OPENAI_VERSION\n",
-    ")\n",
     "\n",
+    "client = AzureOpenAI(\n",
+    "        api_key = os.getenv(\"AZURE_OPENAI_API_KEY\"),  \n",
+    "        api_version = os.getenv(\"AZURE_OPENAI_VERSION\"),\n",
+    "        azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "    )\n",
+    "\n",
+    "# 1. load data into qdrant db in aca or locally\n",
     "# load your data\n",
     "data_dir = \"data/movies\"\n",
     "documents = DirectoryLoader(path=data_dir, glob=\"*.md\", show_progress=True, loader_cls=UnstructuredMarkdownLoader).load()\n",
     "\n",
-    "#create chunks\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
-    "document_chunks = text_splitter.split_documents(documents)\n",
-    "\n",
-    "# create a qdrant index in memory\n",
+    "# use local quadrant (for debugging)\n",
     "qdrant = Qdrant.from_documents(\n",
-    "    document_chunks,\n",
+    "    documents,\n",
     "    embeddings_model,\n",
     "    location=\":memory:\",\n",
     "    collection_name=\"movies\",\n",
     ")\n",
     "\n",
-    "# create a retriever to allow a rag flow\n",
-    "retriever = qdrant.as_retriever()\n",
-    "qa = RetrievalQA.from_chain_type(llm=llm, chain_type=\"stuff\", retriever=retriever)\n",
-    "loader = DirectoryLoader(path=data_dir, glob=\"*.md\", show_progress=True, loader_cls=UnstructuredMarkdownLoader)\n",
+    "# use quadrant in aca\n",
+    "# # --> aus Env, URL von Quadrant\n",
+    "# url = \"http://localhost:6333\"\n",
+    "# qdrant = Qdrant.from_documents(documents,embeddings_model,url=url,prefer_grpc=False,collection_name=\"my_movies\",)\n",
     "\n",
-    "index = VectorstoreIndexCreator(embedding=embeddings_model).from_loaders([loader])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"Tell me about the latest Ant Man movie. When was it released? What is it about?\"\n",
-    "index.query(llm=llm, question=query)"
+    "\n",
+    "# 2. find relevant chunks from vector db\n",
+    "question = \"Tell me about the latest Ant Man movie. When was it released?\"\n",
+    "found_docs = qdrant.similarity_search(question)\n",
+    "found_docs_as_text = \" \"\n",
+    "for elem in enumerate(found_docs, start=1):    \n",
+    "    found_docs_as_text += \" \"+ elem[1].page_content\n",
+    "\n",
+    "# 3. ask llm based on releveant chunks\n",
+    "system_prompt = \"You are an assistant to the user, you are given some context below, please answer the query of the user with as detail as possible\"\n",
+    "\n",
+    "parameters = [system_prompt, ' Context:', found_docs_as_text , ' Question:', question]\n",
+    "joined_parameters = ''.join(parameters)\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "        model = deployment_name,\n",
+    "        messages = [{\"role\" : \"assistant\", \"content\" : joined_parameters}],\n",
+    "    )\n",
+    "\n",
+    "print (response.choices[0].message.content)\n"
    ]
   },
   {
@@ -176,7 +209,9 @@
     "    \"\"\"\n",
     "    Ask a question\n",
     "    \"\"\"\n",
-    "    answer = index.query(llm=llm, question=ask.question)\n",
+    "    #####\n",
+    "    # implement rag flow here\n",
+    "    ######\n",
     "    \n",
     "    print(answer)\n",
     "    return answer"
