Added Azure AI Search
Updated python to 3.12
Changed notebooks
Added deployment scripts for AI
Implemented Managed Identity Auth

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -16,39 +16,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found Azure OpenAI API Base Endpoint: https://cog-fkplarx5db7we.openai.azure.com/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
-    "import requests\n",
     "import os\n",
-    "import openai\n",
-    "from enum import Enum\n",
-    "from pydantic import BaseModel\n",
-    "from openai import AzureOpenAI\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables\n",
     "if load_dotenv():\n",
     "    print(\"Found Azure OpenAI API Base Endpoint: \" + os.getenv(\"AZURE_OPENAI_ENDPOINT\"))\n",
     "else: \n",
-    "    print(\"Azure OpenAI API Base Endpoint not found. Have you configured the .env file?\")\n",
-    "    \n",
-    "API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
-    "API_VERSION = os.getenv(\"OPENAI_API_VERSION\")\n",
-    "RESOURCE_ENDPOINT = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "    print(\"Azure OpenAI API Base Endpoint not found. Have you configured the .env file?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create vector search index\n",
     "\n",
-    "deployment_name = os.getenv(\"AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME\")\n",
-    "model_name = os.getenv(\"AZURE_OPENAI_COMPLETION_MODEL\")"
+    "Create your search index schema and vector search configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.identity import DefaultAzureCredential\n",
+    "from azure.core.credentials import AzureKeyCredential\n",
+    "\n",
+    "from azure.search.documents.indexes import SearchIndexClient\n",
+    "from azure.search.documents.indexes.models import (\n",
+    "    SimpleField,\n",
+    "    SearchFieldDataType,\n",
+    "    SearchableField,\n",
+    "    SearchField,\n",
+    "    VectorSearch,\n",
+    "    HnswAlgorithmConfiguration,\n",
+    "    VectorSearchProfile,\n",
+    "    SemanticConfiguration,\n",
+    "    SemanticPrioritizedFields,\n",
+    "    SemanticField,\n",
+    "    SemanticSearch,\n",
+    "    SearchIndex\n",
+    "\n",
+    ")\n",
+    "\n",
+    "credential = AzureKeyCredential(os.environ[\"AZURE_AI_SEARCH_KEY\"]) if len(os.environ[\"AZURE_AI_SEARCH_KEY\"]) > 0 else DefaultAzureCredential()\n",
+    "\n",
+    "index_name = \"movies-semantic-index\"\n",
+    "\n",
+    "index_client = SearchIndexClient(\n",
+    "    endpoint=os.environ[\"AZURE_AI_SEARCH_ENDPOINT\"], \n",
+    "    credential=credential\n",
+    ")\n",
+    "\n",
+    "# Create a search index with the fields and a vector field which we will fill with a vector based on the overview field\n",
+    "fields = [\n",
+    "    SimpleField(name=\"id\", type=SearchFieldDataType.String, key=True, sortable=True, filterable=True, facetable=True),\n",
+    "    SearchableField(name=\"genre\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"title\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"release_year\", type=SearchFieldDataType.Int32),\n",
+    "    SearchableField(name=\"vote_count\", type=SearchFieldDataType.Int32),\n",
+    "    SearchableField(name=\"overview\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"runtime\", type=SearchFieldDataType.Int32),\n",
+    "    SearchableField(name=\"tagline\", type=SearchFieldDataType.String),\n",
+    "    SearchField(name=\"vector\", type=SearchFieldDataType.Collection(SearchFieldDataType.Single),\n",
+    "                searchable=True, vector_search_dimensions=1536, vector_search_profile_name=\"myHnswProfile\"),\n",
+    "]\n",
+    "\n",
+    "# Configure the vector search configuration  \n",
+    "vector_search = VectorSearch(\n",
+    "    algorithms=[\n",
+    "        HnswAlgorithmConfiguration(\n",
+    "            name=\"myHnsw\"\n",
+    "        )\n",
+    "    ],\n",
+    "    profiles=[\n",
+    "        VectorSearchProfile(\n",
+    "            name=\"myHnswProfile\",\n",
+    "            algorithm_configuration_name=\"myHnsw\",\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Configure the semantic search configuration to prefer title and tagline fields over overview\n",
+    "semantic_config = SemanticConfiguration(\n",
+    "    name=\"movies-semantic-config\",\n",
+    "    prioritized_fields=SemanticPrioritizedFields(\n",
+    "        title_field=SemanticField(field_name=\"title\"),\n",
+    "        keywords_fields=[SemanticField(field_name=\"tagline\")],\n",
+    "        content_fields=[SemanticField(field_name=\"overview\")]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Create the semantic settings with the configuration\n",
+    "semantic_search = SemanticSearch(configurations=[semantic_config])\n",
+    "\n",
+    "# Create the search index with the semantic settings\n",
+    "index = SearchIndex(name=index_name, fields=fields,\n",
+    "                    vector_search=vector_search, semantic_search=semantic_search)\n",
+    "result = index_client.create_or_update_index(index)\n",
+    "print(f' {result.name} created')"
    ]
   },
   {
@@ -60,10 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from enum import Enum\n",
+    "from pydantic import BaseModel\n",
     "\n",
     "class QuestionType(str, Enum):\n",
     "    multiple_choice = \"multiple_choice\"\n",
@@ -93,40 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 131.69it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The latest Ant-Man movie, \"Ant-Man and the Smorgs: Smorgmania,\" was released on February 15, 2026. It is an action-adventure science fiction film, featuring superhero partners Smorg Smorisson, Smorg McLean, and Jenny Smorgth. In this movie, they explore the Smorgs Realm and encounter strange new Smorgs, embarking on an adventurous journey that pushes their limits. The movie has gained popularity with an average vote of 9.5.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain.document_loaders import DirectoryLoader, UnstructuredMarkdownLoader\n",
-    "from langchain_openai import AzureOpenAIEmbeddings\n",
-    "from langchain.vectorstores import Qdrant\n",
-    "\n",
     "import os\n",
-    "from openai import AzureOpenAI\n",
-    "from langchain.vectorstores import Qdrant\n",
-    "\n",
+    "import csv\n",
+    "from langchain_openai import AzureOpenAIEmbeddings\n",
+    "from azure.search.documents import SearchClient\n",
     "\n",
     "# use an embeddingsmodel to create embeddings\n",
     "embeddings_model = AzureOpenAIEmbeddings(    \n",
@@ -135,7 +183,67 @@
     "    model= os.getenv(\"AZURE_OPENAI_EMBEDDING_MODEL\")\n",
     ")\n",
     "\n",
-    "AZURE_OPENAI_VERSION=\"2024-02-01\"\n",
+    "# 1. define function to parse csv row and create embedding for overview text\n",
+    "def parseRow(row: list[str]):\n",
+    "    return dict([\n",
+    "        (\"id\", row[0]),\n",
+    "        (\"genre\", row[1]),\n",
+    "        (\"title\", row[2]),\n",
+    "        (\"release_year\", row[3]),\n",
+    "        (\"vote_count\", row[4]),\n",
+    "        (\"overview\", row[5]),\n",
+    "        (\"runtime\", row[6]),\n",
+    "        (\"tagline\", row[7]),\n",
+    "        (\"vector\", embeddings_model.embed_query(row[5]))\n",
+    "    ])\n",
+    "\n",
+    "# 2. load movies from csv\n",
+    "movies = []\n",
+    "with open('./movies.csv') as csv_file:\n",
+    "    csv_reader = csv.reader(csv_file, delimiter=';')\n",
+    "    line_count = 0\n",
+    "    for row in csv_reader:\n",
+    "        if line_count == 0:\n",
+    "            print(f'Column names are {\", \".join(row)}')\n",
+    "            line_count += 1\n",
+    "        else:\n",
+    "            movie = parseRow(row)\n",
+    "            print(movie)\n",
+    "            movies.append(movie)\n",
+    "            line_count += 1\n",
+    "    print(f'Processed {line_count} lines.')\n",
+    "print('Loaded %s movies.' % len(movies))\n",
+    "\n",
+    "\n",
+    "# 3. upload documents to vector store\n",
+    "search_client = SearchClient(\n",
+    "    endpoint=os.environ[\"AZURE_AI_SEARCH_ENDPOINT\"], \n",
+    "    index_name=index_name,\n",
+    "    credential=credential\n",
+    ")\n",
+    "\n",
+    "result = search_client.upload_documents(movies)\n",
+    "print(f\"Successfully loaded {len(movies)} movies into Azure AI Search index.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Query index and create a response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import AzureOpenAI\n",
+    "from azure.search.documents.models import (\n",
+    "    VectorizedQuery\n",
+    ")\n",
     "\n",
     "client = AzureOpenAI(\n",
     "        api_key = os.getenv(\"AZURE_OPENAI_API_KEY\"),  \n",
@@ -143,33 +251,43 @@
     "        azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
     "    )\n",
     "\n",
-    "# 1. load data into qdrant db in aca or locally\n",
-    "# load your data\n",
-    "data_dir = \"data/movies\"\n",
-    "documents = DirectoryLoader(path=data_dir, glob=\"*.md\", show_progress=True, loader_cls=UnstructuredMarkdownLoader).load()\n",
+    "deployment_name = os.getenv(\"AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME\")\n",
+    "model_name = os.getenv(\"AZURE_OPENAI_COMPLETION_MODEL\")\n",
     "\n",
-    "# use local quadrant (for debugging)\n",
-    "qdrant = Qdrant.from_documents(\n",
-    "    documents,\n",
-    "    embeddings_model,\n",
-    "    location=\":memory:\",\n",
-    "    collection_name=\"movies\",\n",
+    "index_client = SearchClient(\n",
+    "    endpoint=os.environ[\"AZURE_AI_SEARCH_ENDPOINT\"], \n",
+    "    index_name=index_name,\n",
+    "    credential=credential\n",
     ")\n",
     "\n",
-    "# use quadrant in aca\n",
-    "# # --> aus Env, URL von Quadrant\n",
-    "# url = \"http://localhost:6333\"\n",
-    "# qdrant = Qdrant.from_documents(documents,embeddings_model,url=url,prefer_grpc=False,collection_name=\"my_movies\",)\n",
-    "\n",
-    "\n",
-    "# 2. find relevant chunks from vector db\n",
     "question = \"Tell me about the latest Ant Man movie. When was it released?\"\n",
-    "found_docs = qdrant.similarity_search(question)\n",
+    "\n",
+    "# create a vectorized query based on the question\n",
+    "vector = VectorizedQuery(vector=embeddings_model.embed_query(question), k_nearest_neighbors=5, fields=\"vector\")\n",
+    "\n",
+    "\n",
+    "# create search client to retrieve movies from the vector store\n",
+    "found_docs = list(search_client.search(\n",
+    "    search_text=None,\n",
+    "    query_type=\"semantic\",\n",
+    "    semantic_configuration_name=\"movies-semantic-config\",\n",
+    "    vector_queries=[vector],\n",
+    "    select=[\"title\", \"genre\", \"overview\"],\n",
+    "    top=5\n",
+    "))\n",
+    "\n",
+    "# print the found documents and the field that were selected\n",
+    "for doc in found_docs:\n",
+    "    print(\"Movie: {}\".format(doc[\"title\"]))\n",
+    "    print(\"Genre: {}\".format(doc[\"genre\"]))\n",
+    "    print(\"----------\")\n",
+    "\n",
+    "\n",
     "found_docs_as_text = \" \"\n",
     "for elem in enumerate(found_docs, start=1):    \n",
-    "    found_docs_as_text += \" \"+ elem[1].page_content\n",
+    "    found_docs_as_text += \" \"+ \"Movie Title: {}\".format(doc[\"title\"]) +\" \"+ \"Movie story: {}\".format(doc[\"overview\"])\n",
     "\n",
-    "# 3. ask llm based on releveant chunks\n",
+    "# augment the question with the found documents and ask the LLM to generate a response\n",
     "system_prompt = \"You are an assistant to the user, you are given some context below, please answer the query of the user with as detail as possible\"\n",
     "\n",
     "parameters = [system_prompt, ' Context:', found_docs_as_text , ' Question:', question]\n",
@@ -180,7 +298,7 @@
     "        messages = [{\"role\" : \"assistant\", \"content\" : joined_parameters}],\n",
     "    )\n",
     "\n",
-    "print (response.choices[0].message.content)\n"
+    "print (response.choices[0].message.content)"
    ]
   },
   {
@@ -263,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
