--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -18,12 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import requests\n",
     "import os\n",
-    "import openai\n",
-    "from enum import Enum\n",
-    "from pydantic import BaseModel\n",
     "from openai import AzureOpenAI\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -60,12 +55,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# response = client.chat.completions.create(\n",
-    "#     model = model_name,    \n",
-    "#     messages = [{\"role\" : \"assistant\", \"content\" : \"The one thing I love more than anything else is \"}],\n",
-    "# )\n",
+    "response = client.chat.completions.create(\n",
+    "    model = model_name,    \n",
+    "    messages = [{\"role\" : \"assistant\", \"content\" : \"The one thing I love more than anything else is \"}],\n",
+    ")\n",
     "\n",
-    "# print(response)\n"
+    "print(response.choices[0].message.content)"
    ]
   },
   {
@@ -81,6 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from enum import Enum\n",
+    "from pydantic import BaseModel\n",
     "\n",
     "class QuestionType(str, Enum):\n",
     "    multiple_choice = \"multiple_choice\"\n",
@@ -186,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
