added json movies

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -79,11 +79,10 @@
     "    SimpleField(name=\"id\", type=SearchFieldDataType.String, key=True, sortable=True, filterable=True, facetable=True),\n",
     "    SearchableField(name=\"genre\", type=SearchFieldDataType.String),\n",
     "    SearchableField(name=\"title\", type=SearchFieldDataType.String),\n",
-    "    SearchableField(name=\"release_year\", type=SearchFieldDataType.Int32),\n",
-    "    SearchableField(name=\"vote_count\", type=SearchFieldDataType.Int32),\n",
-    "    SearchableField(name=\"overview\", type=SearchFieldDataType.String),\n",
-    "    SearchableField(name=\"runtime\", type=SearchFieldDataType.Int32),\n",
-    "    SearchableField(name=\"tagline\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"year\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"rating\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"plot\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"trivia\", type=SearchFieldDataType.String),\n",
     "    SearchField(name=\"vector\", type=SearchFieldDataType.Collection(SearchFieldDataType.Single),\n",
     "                searchable=True, vector_search_dimensions=1536, vector_search_profile_name=\"myHnswProfile\"),\n",
     "]\n",
@@ -108,8 +107,8 @@
     "    name=\"movies-semantic-config\",\n",
     "    prioritized_fields=SemanticPrioritizedFields(\n",
     "        title_field=SemanticField(field_name=\"title\"),\n",
-    "        keywords_fields=[SemanticField(field_name=\"tagline\")],\n",
-    "        content_fields=[SemanticField(field_name=\"overview\")]\n",
+    "        keywords_fields=[SemanticField(field_name=\"genre\")],\n",
+    "        content_fields=[SemanticField(field_name=\"plot\")]\n",
     "    )\n",
     ")\n",
     "\n",
@@ -172,7 +171,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import csv\n",
+    "import json\n",
     "from langchain_openai import AzureOpenAIEmbeddings\n",
     "from azure.search.documents import SearchClient\n",
     "\n",
@@ -184,33 +183,28 @@
     ")\n",
     "\n",
     "# 1. define function to parse csv row and create embedding for overview text\n",
-    "def parseRow(row: list[str]):\n",
+    "def parseMovie(movie):\n",
+    "    print(movie)\n",
     "    return dict([\n",
-    "        (\"id\", row[0]),\n",
-    "        (\"genre\", row[1]),\n",
-    "        (\"title\", row[2]),\n",
-    "        (\"release_year\", row[3]),\n",
-    "        (\"vote_count\", row[4]),\n",
-    "        (\"overview\", row[5]),\n",
-    "        (\"runtime\", row[6]),\n",
-    "        (\"tagline\", row[7]),\n",
-    "        (\"vector\", embeddings_model.embed_query(row[5]))\n",
+    "        (\"id\", str(movie[\"movie_id\"])),\n",
+    "        (\"genre\", movie[\"movie_genre\"]),\n",
+    "        (\"title\", movie[\"movie_title\"]),\n",
+    "        (\"year\", str(movie[\"movie_year\"])),\n",
+    "        (\"rating\", str(movie[\"movie_rating\"])),\n",
+    "        (\"plot\", movie[\"movie_plot\"]),\n",
+    "        (\"trivia\", movie[\"movie_trivia\"]),\n",
+    "        (\"vector\", embeddings_model.embed_query(movie[\"movie_plot\"]))\n",
     "    ])\n",
     "\n",
     "# 2. load movies from csv\n",
     "movies = []\n",
-    "with open('./movies.csv') as csv_file:\n",
-    "    csv_reader = csv.reader(csv_file, delimiter=';')\n",
+    "with open('./movies.json') as json_data:\n",
+    "    moviesJson = json.load(json_data)\n",
     "    line_count = 0\n",
-    "    for row in csv_reader:\n",
-    "        if line_count == 0:\n",
-    "            print(f'Column names are {\", \".join(row)}')\n",
-    "            line_count += 1\n",
-    "        else:\n",
-    "            movie = parseRow(row)\n",
-    "            print(movie)\n",
-    "            movies.append(movie)\n",
-    "            line_count += 1\n",
+    "    for movieJson in moviesJson:\n",
+    "        movieEmbedding = parseMovie(movieJson)\n",
+    "        movies.append(movieEmbedding)\n",
+    "        line_count += 1\n",
     "    print(f'Processed {line_count} lines.')\n",
     "print('Loaded %s movies.' % len(movies))\n",
     "\n",
@@ -272,7 +266,7 @@
     "    query_type=\"semantic\",\n",
     "    semantic_configuration_name=\"movies-semantic-config\",\n",
     "    vector_queries=[vector],\n",
-    "    select=[\"title\", \"genre\", \"overview\"],\n",
+    "    select=[\"title\", \"genre\", \"plot\"],\n",
     "    top=5\n",
     "))\n",
     "\n",
@@ -285,7 +279,7 @@
     "\n",
     "found_docs_as_text = \" \"\n",
     "for elem in enumerate(found_docs, start=1):    \n",
-    "    found_docs_as_text += \" \"+ \"Movie Title: {}\".format(doc[\"title\"]) +\" \"+ \"Movie story: {}\".format(doc[\"overview\"])\n",
+    "    found_docs_as_text += \" \"+ \"Movie Title: {}\".format(doc[\"title\"]) +\" \"+ \"Movie story: {}\".format(doc[\"plot\"])\n",
     "\n",
     "# augment the question with the found documents and ask the LLM to generate a response\n",
     "system_prompt = \"You are an assistant to the user, you are given some context below, please answer the query of the user with as detail as possible\"\n",
