--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "class QuestionType(str, Enum):\n",
     "    multiple_choice = \"multiple_choice\"\n",
-    "    true_false = \"true_false\"\n",
+    "    true_or_false = \"true_or_false\"\n",
     "    popular_choice = \"popular_choice\"\n",
     "    estimation = \"estimation\"\n",
     "\n",
