--- a/src-agents/phase5/notebook_p5.ipynb
+++ b/src-agents/phase5/notebook_p5.ipynb
@@ -160,7 +160,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ask = Ask(question=\"What is a liquid humans drink (and Smorghs hate)?\", type=QuestionType.popular_choice)\n",
+    "ask = Ask(question=\"What is a liquid humans drink (and Smoorghs hate)?\", type=QuestionType.popular_choice)\n",
     "answer = await ask_question(ask)\n",
     "print('Answer:', answer)"
    ]
